@@ -1,12 +1,68 @@
 <?xml version="1.0"?>
 <bonobo-config>
   <section path="main">
-    <entry name="color1" type="color" value="#000000"/>
-    <entry name="color2" type="color" value="#ffffff"/>
-    <entry name="orientation" type="ulong" value="0"/>
-    <entry name="wallpaper_type" type="ulong" value="0"/>
-    <entry name="wallpaper_filename" type="string" value=""/>
-    <entry name="opacity" type="long" value="100"/>
+    <entry name="wallpaper_type" type="ulong" value="2"/>
+    <entry name="color1">
+      <any>
+        <type name="Color" repo_id="IDL:Bonobo/Config/Color:1.0" tckind="15" length="0" sub_parts="4">
+          <subnames>
+            <name>r</name>
+            <name>g</name>
+            <name>b</name>
+            <name>a</name>
+          </subnames>
+          <subtypes>
+            <type tckind="7" length="0" sub_parts="0"/>
+            <type tckind="7" length="0" sub_parts="0"/>
+            <type tckind="7" length="0" sub_parts="0"/>
+            <type tckind="7" length="0" sub_parts="0"/>
+          </subtypes>
+        </type>
+        <value>
+          <value>0</value>
+          <value>0.0117189</value>
+          <value>0.156252</value>
+          <value>0</value>
+        </value>
+      </any>
+    </entry>
+    <entry name="color2">
+      <any>
+        <type name="Color" repo_id="IDL:Bonobo/Config/Color:1.0" tckind="15" length="0" sub_parts="4">
+          <subnames>
+            <name>r</name>
+            <name>g</name>
+            <name>b</name>
+            <name>a</name>
+          </subnames>
+          <subtypes>
+            <type tckind="7" length="0" sub_parts="0"/>
+            <type tckind="7" length="0" sub_parts="0"/>
+            <type tckind="7" length="0" sub_parts="0"/>
+            <type tckind="7" length="0" sub_parts="0"/>
+          </subtypes>
+        </type>
+        <value>
+          <value>0.00781262</value>
+          <value>0</value>
+          <value>0.996109</value>
+          <value>0</value>
+        </value>
+      </any>
+    </entry>
+    <entry name="orientation" type="ulong" value="1"/>
+    <entry name="wallpaper_filename">
+      <any>
+        <type name="FileName" repo_id="IDL:Bonobo/Config/FileName:1.0" tckind="21" length="0" sub_parts="1">
+          <subtypes>
+            <type tckind="18" length="0" sub_parts="0"/>
+          </subtypes>
+        </type>
+        <value>
+          <value>/usr/share/pixmaps/backgrounds/ximian/bluestripe.jpeg</value>
+        </value>
+      </any>
+    </entry>
+    <entry name="opacity" type="long" value="1100"/>
   </section>
 </bonobo-config>
-
