@@ -1,3 +1,7 @@
+2001-07-23  Bradford Hovinen  <hovinen@ximian.com>
+
+	* applier.c (renderer_render_wallpaper): Don't adjust pixmap width
+
 2001-07-20  Chema Celorio  <chema@celorio.com>
 
 	* RELEASE : 1.5.0
